# -kudos-localPackage

./: README.md
fake_op3/: CMakeLists.txt  main_fake_op3.py  package.xml
fake_op3/msg/: kudos_vision_ball_position.msg  kudos_vision_gcm.msg  kudos_vision_head_pub.msg  kudos_vision_mcl2_local_result.msg  kudos_vision_op3_local_mode.msg
mcl2/: CMakeLists.txt  bin_file_reader.py  map_maker.py  package.xml
mcl2/bh_play_ground/: bashrc.txt
mcl2/include/mcl_localization/: mcl.h
mcl2/msg/: kudos_vision_local_sensor_data.msg
mcl2/src/: mainwindow.cpp  mcl.cpp  mcl_item.cpp
soccer_simu/: CMakeLists.txt  local_transpose_final.py  package.xml  soccer_simu_local_result_processor.py  workspace.code-workspace
soccer_simu/msg/: mcl2_local_result.msg  mcl2_sensor_data.msg
soccer_simu/old_code/: perspective_test.py  soccer_simu_sensor.py  soccer_simu_sensor_perspective_test.py
